--- a/index.html
+++ b/index.html
@@ -1,19 +1,249 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>My Webpage</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-  </head>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
 
+body, html {
+  height: 100%;
+  line-height: 1.8;
+}
+
+/* Full height image header */
+.bgimg-1 {
+  background-position: center;
+  background-size: cover;
+  background-image: url("https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/118414672_1503068233209685_4204689523203936771_o.jpg?_nc_cat=100&_nc_sid=730e14&_nc_ohc=GYJVszv1qusAX-jUHkQ&_nc_oc=AQnksw28VumIcoMXdv5WJ8XAlt87gSN9t1uq-Y4AnLyhAQHI1tFanRu2_LBS7A3G4eU&_nc_ht=scontent-dfw5-2.xx&oh=0a8512f39cc3c90f1d0ea6fa587fafe4&oe=5F70CE69");
+  min-height: 100%;
+}
+
+.w3-bar .w3-button {
+  padding: 5px;
+}
+</style>
 <body>
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td align="center"><h3><font color="#990000">Hi there!!</font></h3></td>
-  </tr>
-  <tr>
-    <td align="center"><font color="#990000"><br><br><em>This is my website, which is currently under construction.</em></font></td>
-  </tr>
-</table>
+
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-card" id="myNavbar">
+    <a href="#home" class="w3-bar-item w3-button w3-wide">HOME</a>
+    <!-- Right-sided navbar links -->
+    <div class="w3-right w3-hide-small">
+      <a href="#about" class="w3-bar-item w3-button">ABOUT ME</a>
+      <a href="#team" class="w3-bar-item w3-button"></i> PORTFOLIO</a>
+      <a href="#work" class="w3-bar-item w3-button"></i> SERVICE</a>
+      <a href="#pricing" class="w3-bar-item w3-button"></i> QUALIFICATIONS</a>
+      <a href="#contact" class="w3-bar-item w3-button"></i> SECRET</a>
+    </div>
+    <!-- Hide right-floated links on small screens and replace them with a menu icon -->
+
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+</div>
+
+<!-- Sidebar on small screens when clicking the menu icon -->
+<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT ME</a>
+  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
+  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">SERVICE</a>
+  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">TECH QUALIFICATIONS</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">SECRET</a>
+</nav>
+
+<!-- Header with full-height image -->
+<header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
+  <div class="w3-display-left w3-text-white" style="padding:48px">
+     <span class="w3-xxlarge">Hi there,</span>
+    <p><span class="w3-jumbo w3-hide-small">I'm Kara</span><br></p>
+    <span class="w3-xxxlarge w3-hide-large w3-hide-medium">I'm Kara</span><br>
+
+
+  </div>
+  <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
+</header>
+
+<!-- About Section -->
+<div class="w3-container" style="padding:128px 16px" id="about">
+  <h3 class="w3-center">ABOUT ME</h3>
+  <p class="w3-center w3-large">Paragraph of things about me blahblahblah</p>
+</div>
+
+<!-- Promo Section - "We know design" -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px">
+  <div class="w3-row-padding">
+    <div class="w3-col m6">
+      <h3>Continued about me?</h3>
+      <p>all about meeeee <br>Continue talking about me?</p>
+      <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View qualifications</a></p>
+    </div>
+
+  </div>
+</div>
+
+<!-- Team Section -->
+<div class="w3-container" style="padding:128px 16px" id="team">
+  <h3 class="w3-center">Portfolio</h3>
+  <p class="w3-center w3-large">work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done work just a ton of work ive done</p>
+  <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        <img src="/w3images/team2.jpg" alt="something" style="width:100%">
+        <div class="w3-container">
+          <h3>something</h3>
+          <p class="w3-opacity">something</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        <img src="/w3images/team1.jpg" alt="something" style="width:100%">
+        <div class="w3-container">
+          <h3>something</h3>
+          <p class="w3-opacity">something</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        <img src="/w3images/team3.jpg" alt="something" style="width:100%">
+        <div class="w3-container">
+          <h3>something</h3>
+          <p class="w3-opacity">something</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+        </div>
+      </div>
+    </div>
+    <div class="w3-col l3 m6 w3-margin-bottom">
+      <div class="w3-card">
+        <img src="/w3images/team4.jpg" alt="something" style="width:100%">
+        <div class="w3-container">
+          <h3>something</h3>
+          <p class="w3-opacity">something</p>
+          <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Promo Section "Statistics" -->
+<div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
+  <div class="w3-quarter">
+    <span class="w3-xxlarge">1</span>
+    <br>something
+  </div>
+  <div class="w3-quarter">
+    <span class="w3-xxlarge">2</span>
+    <br>Projects something else
+  </div>
+  <div class="w3-quarter">
+    <span class="w3-xxlarge">3</span>
+    <br>3rd thing
+  </div>
+  <div class="w3-quarter">
+    <span class="w3-xxlarge">4</span>
+    <br>4th thing
+  </div>
+</div>
+
+<!-- Work Section -->
+<div class="w3-container" style="padding:128px 16px" id="work">
+  <h3 class="w3-center">Service</h3>
+  <p class="w3-center w3-large">The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back The things ive done to give back</p>
+
+
+</div>
+
+
+<!-- Pricing Section -->
+<div class="w3-container w3-center w3-dark-grey" style="padding:128px 16px" id="pricing">
+      <h3>My technical qualifications</h3>
+      <p style="text-align:left">Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications <br>
+      tempor incididunt ut labore et dolore.</p>
+      <p style="text-align:left">Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications <br>
+      Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications Just a ton of qualifications </p>
+    <iframe src="./KaraCappsResume.pdf" width="100%" height="500px">
+    </iframe>
+  </div>
+
+
+<!-- Contact Section -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
+  <h3 class="w3-center">SECRET PAGE</h3>
+  <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
+  <div style="margin-top:48px">
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Chicago, US</p>
+    <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: +00 151515</p>
+    <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: mail@mail.com</p>
+    <br>
+    <form action="/action_page.php" target="_blank">
+      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
+      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
+      <p>
+        <button class="w3-button w3-black" type="submit">
+          <i class="fa fa-paper-plane"></i> SEND MESSAGE
+        </button>
+      </p>
+    </form>
+    <!-- Image of location/map -->
+    <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+  </div>
+</div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-64">
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <div class="w3-xlarge w3-section">
+
+    <i class="fa fa-linkedin w3-hover-opacity"></i>
+  </div>
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+</footer>
+
+<script>
+// Modal Image Gallery
+function onClick(element) {
+  document.getElementById("img01").src = element.src;
+  document.getElementById("modal01").style.display = "block";
+  var captionText = document.getElementById("caption");
+  captionText.innerHTML = element.alt;
+}
+
+
+// Toggle between showing and hiding the sidebar when clicking the menu icon
+var mySidebar = document.getElementById("mySidebar");
+
+function w3_open() {
+  if (mySidebar.style.display === 'block') {
+    mySidebar.style.display = 'none';
+  } else {
+    mySidebar.style.display = 'block';
+  }
+}
+
+// Close the sidebar with the close button
+function w3_close() {
+    mySidebar.style.display = "none";
+}
+</script>
 
 </body>
 </html>
