edited word content

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>AboutMe</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -20,6 +20,15 @@ body, html {
 .w3-bar .w3-button {
   padding: 5px;
 }
+
+img {
+    float: left;
+    border-radius: 50%;
+}
+img1{
+    clear: both;
+}
+
 </style>
 <body>
 
@@ -53,34 +62,23 @@ body, html {
 </nav>
 
 <div class="w3-container" style="padding:128px 16px" id="about">
-      <p class="w3-center w3-large w3-text-grey" > The best way to predict the future is to create it
-      - <em>Pete Drucker</em>  </p>
+      <p class="w3-center w3-large w3-text-grey" >
+    <em></em>  </p>
       <p class="w3-center w3-text-white"> - </p>
   <h3 class="w3-center">ABOUT ME</h3>
-  <p class="w3-center w3-large">Hi there and welcome to my webpage! My name is Kara Capps and I am an undergraduate Computer Science student at Texas A&M University with an interest in AI and Software Development. I majored in Computer Science because it is challenging and intriguing. I believe we can do anything that we put our minds to. </p>
-  <p class="w3-center w3-large"> In addition to my studies, I am an amateur latte artist and own a cat who keeps me company during quarantine!<br>
+  <p class="w3-left w3-large w3-light-grey" style= "padding:64px 35px"><img class=”img1”  src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/118627036_1503046949878480_7825201028668123662_o.jpg?_nc_cat=105&_nc_sid=730e14&_nc_ohc=05cInQcFj8gAX8oBkvh&_nc_ht=scontent-dfw5-1.xx&oh=fad98e2b85b4e73e6293ca9077c3545b&oe=5F7B53FC"style="margin-right:15px"  width="510" height ="680" alt="Picture of me" >Hi there and welcome to my webpage! My name is Kara Capps and I am an undergraduate Computer Science student at Texas A&M University with an interest in AI and Software Development. Before I started college, I had never taken any Computer Science classes. The subject seemed foreign and intimidating, so I never thought that I could study something like Computer Science. It wasn't until my sister, who was majoring in Computer Engineering, told me that she thought I would be good at it based on how I thought through mathematical problems while she tutored me in my senior year of high school that I thought about the possibility of pursuing a technological field. I followed a C++ programming tutorial and after creating my first basic program, I decided that Computer Science was what I wanted to do. Ever since then, I have always been grateful to my sister for introducing me to the subject I have become so passionate about. Two things that solidified my decision was my social organization, <a class href="https://www.awics.org">AWICS</a></dd> (Aggie Women in Computer Science), and the opportunity I had to attend the <a class href="https://ghc.anitab.org">Grace Hopper Conference</a></dd> towards the beginning of my college career. I had an amazing experience connecting with other women in Computer Science and I'm excited to be able to attend Grace Hopper again virtually this year. In addition to my studies, I worked at Starbucks this past year and am an amateur latte artist. I enjoyed working at Starbucks because it was a fast paced environment, I loved seeing how happy customers were when they got their favorite drink, and I got to connect with so many different kinds of people. During my free time I enjoy traveling with my sister and friends, working out, and cooking. I have been a vegetarian for three years and went vegan at the beginning of 2020, so I have enjoyed experimenting with new vegan recipes. I also own a cat who keeps me company during quarantine!<br>
 
-      <img src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/118804310_1505524422964066_6712546642346112761_o.jpg?_nc_cat=110&_nc_sid=730e14&_nc_ohc=QGq9LzPjoVQAX94wxsa&_nc_ht=scontent-dfw5-1.xx&oh=d4b7a9f1b18105b76766fb3d36a33fb8&oe=5F74DED5" class="rounded" width="316" height ="236" alt="GHC">
+  <img class="img1 w3-center" style="clear: both;" src="https://scontent-dfw5-1.xx.fbcdn.net/v/t1.0-9/118804310_1505524422964066_6712546642346112761_o.jpg?_nc_cat=110&_nc_sid=730e14&_nc_ohc=QGq9LzPjoVQAX94wxsa&_nc_ht=scontent-dfw5-1.xx&oh=d4b7a9f1b18105b76766fb3d36a33fb8&oe=5F74DED5"  width="316" height ="236" alt="cat"></p>
   </div>
 
 
 <!-- Promo Section - "We know design" -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px">
-  <div class="w3-row-padding">
-    <div class="w3-col m6">
-      <p> I am part of <a class href="https://www.awics.org">AWICS</a></dd> (Aggie Women in Computer Science) and am attending the <a class href="https://ghc.anitab.org">Grace Hopper Conference</a></dd> for the second time at the end of September (this time virtually!)</p>
-    </div>
-    
-    <div class="w3-col m1">
-        <img src="https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/118793892_1505497672966741_3140212235375988217_o.jpg?_nc_cat=100&_nc_sid=730e14&_nc_ohc=M0cakLKMLiUAX81fOy7&_nc_ht=scontent-dfw5-2.xx&oh=22c2146738b7ec163c02410a35a5c253&oe=5F770CE3" class="rounded" width="177" height ="237" alt="GHC">
-    </div>
 
-  </div>
-</div>
 
 </body>
 
 <footer class="w3-left w3-white w3-padding-64">
+    
   <p>Powered by <br><a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-left w3-hover-text-green">w3.css</a>
   </p>
 </footer>
