--- a/Portfolio.html
+++ b/Portfolio.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Portfolio</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -50,7 +50,6 @@ body, html {
   <a href="Portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
   <a href="TechQual.html" onclick="w3_close()" class="w3-bar-item w3-button">QUALIFICATIONS</a>
   <a href="Service.html" onclick="w3_close()" class="w3-bar-item w3-button">SERVICE</a>
-  <a href="Secret.html" onclick="w3_close()" class="w3-bar-item w3-button">SECRET</a>
 </nav>
 
 <div class="w3-container w3-light-grey" style="padding:64px" id="team">
@@ -81,15 +80,24 @@ body, html {
                 <dd>- Constructed an elementary HACK computer system via building an assembler in Python </dd>
                 <dd>- Designed all necessary chips to implement CPU and storage in HDL and HACK assembly</dd>
                 <dt>• Autonomous Underwater Vehicle Project</dt>
-                <dd>- Lead a cross-disciplinary team in A&M's Women in Engineering's project team, <a class href="https://github.com/Karacapps22/BuddyMemoryAllocator">WE AUV</a> by delegating responsibilities and leading communications to ensure timelines were met</dd>
-                <dd>- Learned and researched Python and OpenCV to help infrastructure the stereo vision system</dd>
+                <dd>- Lead a cross-disciplinary team in A&M's Women in Engineering's project team, <a class href="https://reaftamu.wixsite.com/website">WE AUV</a> by delegating responsibilities and leading communications to ensure timelines were met</dd>
+                <dd>- Learned and researched Python and <a class href="https://opencv.org">OpenCV</a> to help infrastructure the stereo vision system</dd>
               </dl>
               <h3>In Progress</h3>
               <p>
                 <dl>
-                <dt>• Multiplayer FPS Game</dt>
-                    <dd>- Using Unity IDE in order to construct a 3D Multiplayer FPS Game in preparation for a Fall Unity Developer Internship at <a class href="https://www.netedgevr.com">NetEdgeVR</a></dd>
+                <dt>• Pre-internship Unity Development Training</dt>
+                    <dd>- Building small 3D platform game to learn the fundamentals of Unity in preparation for an internship at <a class href="https://www.netedgevr.com">NetEdgeVR</a></dd>
+                    <dd>- Builing a first person shooter with full gameplay and AI opponents to learn more advanced concepts around game management, physics, and interactive AI </dd>
+                    <dd>- Code will soon be <a class href="https://github.com/Karacapps22/FPSgame">here</a>
                 </dl>
+                <h3> Future Projects </h3>
+                <dl>
+                    <dt>• Full-stack Database </dt>
+                        <dd>- Plan to work in a team of four to develop an AWS database on a server using PostgreSQL and connecting to it with Java JDBC </dd>
+                        <dd>- Plan to create a GUI that interfaces with the data from a local machine </dd>
+                </dl>
+                    
         </div>
       </div>
     </div>
@@ -98,20 +106,20 @@ body, html {
 
 <div class="w3-container w3-row w3-center w3-white w3-padding-64">
   <div class="w3-quarter">
-    <span class="w3-xxlarge">1</span>
-    <br>something
+    <span class="w3-xxlarge"></span>
+    <br>
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">2</span>
-    <br>Projects something else
+    <span class="w3-xxlarge"></span>
+    <br>
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">3</span>
-    <br>3rd thing
+    <span class="w3-xxlarge"></span>
+    <br>
   </div>
   <div class="w3-quarter">
-    <span class="w3-xxlarge">4</span>
-    <br>4th thing
+    <span class="w3-xxlarge"></span>
+    <br>
   </div>
 </div>
 
