--- a/Service.html
+++ b/Service.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Service</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -50,7 +50,6 @@ body, html {
   <a href="Portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
   <a href="TechQual.html" onclick="w3_close()" class="w3-bar-item w3-button">QUALIFICATIONS</a>
   <a href="Service.html" onclick="w3_close()" class="w3-bar-item w3-button">SERVICE</a>
-  <a href="Secret.html" onclick="w3_close()" class="w3-bar-item w3-button">SECRET</a>
 </nav>
 
 <div class="w3-container w3-light-grey" style="padding:64px" id="team">
@@ -64,9 +63,9 @@ body, html {
           <p>
               <dl>
                 <dt>• Encourage Computer Science and Engineering in schools (virtually and in person!)</dt>
-                <dd>- Many students in highschool and middle school aren't given the opportunity to learn about Computer Science and Engineering, and even if they are, they may not choose to pursue it because they don't know enough about it or think they won't do well.</dd>
-                <dd>- A study by Google showed that students who are told that they would be good at Computer Science are 2.5 to 3 times more likely to be interested in it. Additionally, Google’s research reports that students who have high self confidence in their ability to learn computer science are nearly four times more interested in learning computer science. </dd>
-                <dd>- By encouraging younger students and being role models, we can give them the opportunity to pursue Computer Science and Engineering. If we are able to influence the younger generation to puruse Computer Science and Engineering as a passion, the world of technology will have the potential to gain more smart and passionate minds.
+                <dd>- Many students in highschool and middle school aren't given the opportunity to learn about Computer Science and Engineering.</dd>
+                <dd>- A <a class href="https://services.google.com/fh/files/misc/encouraging-students-toward-computer-science-learning-brief.pdf">study</a> showed that students who are told that they would be good at Computer Science are 2.5 to 3 times more likely to be interested in it. Additionally, the study's research reports that students who have high self confidence in their ability to learn computer science are nearly four times more interested in learning computer science. </dd>
+                <dd>- By encouraging younger students and being role models, we can give them the opportunity to pursue Computer Science and Engineering
               </dl>
         </div>
       </div>
@@ -75,13 +74,8 @@ body, html {
 </div>
 
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="work">
-    <p>sources:
-    <br> <a class href="https://services.google.com/fh/files/misc/encouraging-students-toward-computer-science-learning-brief.pdf">Google study</a></dd></p>
-
-<footer class="w3-left w3-light-grey w3-padding-64">
-  <p>Powered by <br><a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-left w3-hover-text-green">w3.css</a>
-  </p>
-</footer>
+    <p>Powered by <br><a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-left w3-hover-text-green">w3.css</a>
+    </p>
 
 <script>
 // Modal Image Gallery
