--- a/TechQual.html
+++ b/TechQual.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Qualifications</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -53,7 +53,6 @@ body, html {
   <a href="Portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
   <a href="TechQual.html" onclick="w3_close()" class="w3-bar-item w3-button">QUALIFICATIONS</a>
   <a href="Service.html" onclick="w3_close()" class="w3-bar-item w3-button">SERVICE</a>
-  <a href="Secret.html" onclick="w3_close()" class="w3-bar-item w3-button">SECRET</a>
 </nav>
 
 <div class="w3-container w3-center w3-white" style="padding:128px" id="pricing">
@@ -65,35 +64,30 @@ body, html {
 <div class="w3-white" style="margin-top:64px">
     <div class="w3-card">
       <div class="w3-container">
-        <h3>Education</h3>
-        <p>
-            Undergraduate Computer Science student at Texas A&M University
-            <br>
-            <b>August 2018-Present</b>
-            <br>• Degree expected: Winter 2021
-            <br>• GPA 3.12
-            </p>
-            <p> Undergraduate Computer Science student at Blinn College<br>
-            <b>August 2017-August 2018</b>
+        <h3></h3>
+        <p> During my time at A&M University, I have taken a variety of core Computer Science classes and am now focusing on Software Development and Artificial Intelligence, which are my key areas of interest.
+        </p>
             
+        <p> At the end of September I am starting a part-time internship with <a class href="https://www.netedgevr.com">NetEdgeVR</a> where I will be assisting in Unity code development for backend communication with external database for statistical analysis, as well as helping to develop interactive VR content in order to familiarize and train clients in VR application uses
+        </p>
             
       </div>
     </div>
   </div>
 </div>
-<div class="w3-container w3-light-grey" style="padding:16px 16px" id="team">
+<div class="w3-container w3-light-grey" style="padding:4px 16px" id="team">
 <div class="w3-white" style="margin-top:64px">
     <div class="w3-card">
       <div class="w3-container">
-        <h3>Experience</h3>
+        <h3>Education</h3>
         <p>
-            Unity Developer Intern at NetEdgeVr&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>September 2020-Present</b>
-            <br>• Helping with Unity code that interacts with external database connections as well as getting into VR toolkits and testing &nbsp;&nbsp;using a VR headset
+         Undergraduate Computer Science student at <a class href="https://engineering.tamu.edu/cse/index.html">Texas A&M University</a><br>
+         <em>Expected Graduation: December 2021</em>
+            </p>
       </div>
     </div>
   </div>
 </div>
-
 <div class="w3-container w3-light-grey" style="padding:4px 16px" id="team">
 <div class="w3-white" style="margin-top:64px">
     <div class="w3-card">
@@ -110,7 +104,7 @@ body, html {
 </div>
 
 <div class="w3-container w3-center w3-light-grey" style="padding:64px" id="pricing">
-    <p class="w3-center w3-large "> Download my resume <a class href="https://drive.google.com/file/d/1rqaTFTcj5GAEcmq1S_oKFLfXVs9Lisc9/view">here</a>!</p>
+    <p class="w3-center w3-large "> Download my resume <a class href="https://drive.google.com/file/d/1rqaTFTcj5GAEcmq1S_oKFLfXVs9Lisc9/view">here</a></p>
   
   <iframe src="./KaraCappsResume.pdf" width="100%" height="500px">
   </iframe>
