--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Kara Capps</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -18,7 +18,7 @@ body, html {
 .bgimg-1 {
   background-position: center;
   background-size: cover;
-  background-image: url("https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/118414672_1503068233209685_4204689523203936771_o.jpg?_nc_cat=100&_nc_sid=730e14&_nc_ohc=GYJVszv1qusAX-jUHkQ&_nc_oc=AQnksw28VumIcoMXdv5WJ8XAlt87gSN9t1uq-Y4AnLyhAQHI1tFanRu2_LBS7A3G4eU&_nc_ht=scontent-dfw5-2.xx&oh=0a8512f39cc3c90f1d0ea6fa587fafe4&oe=5F70CE69");
+  background-image: url("https://scontent-dfw5-2.xx.fbcdn.net/v/t1.0-9/119039160_1509853239197851_8492214509453771612_o.jpg?_nc_cat=106&_nc_sid=8bfeb9&_nc_ohc=cKCksY7F31sAX869KSH&_nc_ht=scontent-dfw5-2.xx&oh=667539f301965b716afb19d97d0ab089&oe=5F7E523B");
   min-height: 100%;
 }
 /*
@@ -55,7 +55,6 @@ body, html {
   <a href="Portfolio.html" onclick="w3_close()" class="w3-bar-item w3-button">PORTFOLIO</a>
   <a href="TechQual.html" onclick="w3_close()" class="w3-bar-item w3-button">QUALIFICATIONS</a>
   <a href="Service.html" onclick="w3_close()" class="w3-bar-item w3-button">SERVICE</a>
-  <a href="Secret.html" onclick="w3_close()" class="w3-bar-item w3-button">SECRET</a>
 </nav>
 
 
