edited word content

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -59,10 +59,19 @@ body, html {
       <div class="w3-card">
         <div class="w3-container">
           <p>View my <a class href="https://github.com/Karacapps22">GitHub</a></dd> and <a class href="https://www.linkedin.com/in/kara-capps-10099616b/">LinkedIn</a></dd>
+          
           </p>
+          <p>
+          Contact:
+          <br>
+          kara.capps44@gmail.com
+          <br>
+          (512)969-0560
+          </p>
+            </div>
+          </div>
         </div>
-      </div>
-    </div>
+  </div>
   </div>
   
   <div class="w3-container" style="padding:16px 16px" id="team">
