--- a/Portfolio.html
+++ b/Portfolio.html
@@ -26,7 +26,7 @@ body, html {
 <!-- Navbar (sit on top) -->
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-white w3-card" id="myNavbar">
+  <div class="w3-bar w3-card" id="myNavbar" style= "background-color: snow;">
     <a href="index.html" class="w3-bar-item w3-button w3-wide">HOME</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
